2016-01-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_convert_preformatted_type): Add an
	extra newline after a <pre> tag if the contents begins with a 
	newline.

2016-01-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/README,
	* tp/tests/README: 2016 in copyright dates.

2016-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\enableemergencynewline): New macro.
	(\fixbackslash): Use it, in order to give newline a default
	active definition.

2016-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex, NEWS: For XeTeX and LuaTeX, use input by 
	bytes instead of by UTF-8 codepoints.  Documents encoded in 
	UTF-8 reported broken by Werner Lemberg.

2016-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (%css_map): Use 'font-family: initial'
	instead of 'font-family: serif' for @r.  Suggestion from Karl Berry.

2016-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* INSTALL: Some words about XS.
	* README-hacking: Words about translation updates.

2016-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am,
	* tp/Texinfo/Convert/XSParagraph/Makefile.am,
	* tp/texi2any.pl: Replace uses of pkglibexecdir with pkglibdir.
	Modules installed under pkglibexecdir weren't being found due 
	not being substituted by configure script.  Reported by
	Andreas Schwab.  Probably related to AC_SUBST in 'gl_CONFIGMAKE'
	in 'configmake' gnulib module overriding the default definition.

2016-01-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (copy_converting): Don't check whether a 
	value of type size_t is negative in loop condition, because 
	size_t is unsigned.  Always loop instead.

2016-01-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/terminal.c (term_mm, terminal_has_meta_p): Remove unused 
	variables.
	* info/terminal.c (terminal_initialize_terminal),
	* info/pcterm.c (pc_initialize_terminal): Don't refer to removed 
	variables.
