@@ -1,5 +1,10 @@
 2016-01-06  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Convert/XSParagraph/Makefile.am (install-data-hook):
+	Remove TestXS module files after they are installed.
+
+2016-01-06  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/Texinfo/Convert/HTML.pm (_convert_preformatted_type): Add an
 	extra newline after a <pre> tag if the contents begins with a 
 	newline.
